Fixes broken input fields in Safari.

--- a/css/main.css
+++ b/css/main.css
@@ -173,6 +173,8 @@ a.bottomToolbarButton:hover {
 }
 
 input[type='text'], input[type='password'], textarea {
+    -webkit-user-select: text;
+    user-select: text;
     display: inline-block;
     font-size: 14px;
     padding: 5px;
